Fix overflow & scroll.

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,9 @@ div {
     margin: auto;
     background-color: rgba(28, 28, 28, 0.8);
     color: white;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 400px;
 }
 
 #list input {
@@ -122,7 +125,7 @@ div {
     line-height: 0;
 }
 
-#list-content li p {
+#list-content li span {
     display: inline-block;
     padding: 10px;
 }
